--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ categories = ["command-line-utilities", "cryptography"]
 documentation = "https://docs.rs/seedpass"
 
 [dependencies]
-mimalloc = { version = "*", features = ["secure"] }
+mimalloc = { version = "0.1.43", features = ["secure"] }
 zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
 sha3 = "0.10.8"
 hmac = "0.12.1"
